优化过时方法